[package]
name = "tucao-d2r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json_comments = "0.2.2"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive", ] }
serde_json = "1.0"
serde_jsonrc = "0.1.0"
